style(vue): Make the class viewer prettier

--- a/frontend/src/styles/base.sass
+++ b/frontend/src/styles/base.sass
@@ -35,6 +35,7 @@
 	--color-text: var(--vt-c-text-light-1)
 
 	--section-gap: 160px
+	--transition-duration: .3s
 
 @media (prefers-color-scheme: dark)
 	:root
@@ -66,3 +67,6 @@ body
 	text-rendering: optimizeLegibility
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
+
+button
+	cursor: pointer
